k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt2-trainer
  namespace: gpt2-trainer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpt2-trainer
  template:
    metadata:
      labels:
        app: gpt2-trainer
    spec:
      containers:
      - name: gpt2-trainer
        image: aksclusterprojectregistry.azurecr.io/gpt2-finetune:v1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: gpt2-trainer-service
  namespace: gpt2-trainer-app
spec:
  type: LoadBalancer
  selector:
    app: gpt2-trainer
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 30007
