k8s/gpt2-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt2-api-deployment
  namespace: gpt2-trainer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpt2-api
  template:
    metadata:
      labels:
        app: gpt2-api
    spec:
      containers:
      - name: gpt2-api-container
        image: acrregistryvijaya.azurecr.io/serve-api:v1
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: gpt2-api-service
  namespace: gpt2-trainer-app
spec:
  type: LoadBalancer
  selector:
    app: gpt2-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
